--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseño de 3 Cuadros</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>Diseño con Banner y Cuadros</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="box">Cuadro 1</div>
-        <div class="box">Cuadro 2</div>
-        <div class="box">Cuadro 3</div>
+        <div class="box banner">A</div>
+        <div class="bottom-container">
+            <div class="box">B</div>
+            <div class="box">C</div>
+        </div>
     </div>
 </body>
 </html>
-
