--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseño con Banner y Cuadros</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
     <div class="container">
