--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseño con Banner y Cuadros</title>
     <link rel="stylesheet" href="./estilos.css">
+    <title>Hola</title>
 </head>
 <body>
-    <div class="container">
-        <div class="box banner">A</div>
-        <div class="bottom-container">
-            <div class="box">B</div>
-            <div class="box">C</div>
-        </div>
+    <div id="container">
+        <div class="boxes">A</div>
+        <div class="boxes">B</div>
+        <div class="boxes">C</div>
     </div>
+    
 </body>
 </html>
