--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseño con Banner y Cuadros</title>
-    <link rel="stylesheet" href="./estilos.css">
-    <title>Hola</title>
+    <title>Brayan Trujillo</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <div class="container">
-        <div class="box banner">A</div>
-        <div class="bottom-container">
-            <div class="box">B</div>
-            <div class="box">C</div>
+        <div class="Box Box-a">A</div>
+        <div class="row">
+            <div class="Box Box-b">B</div>
+            <div class="Box Box-c">C</div>
         </div>
     </div>
 </body>
